fixed app footer spacing

--- a/source/components/app/app.scss
+++ b/source/components/app/app.scss
@@ -31,16 +31,26 @@ article {
 }
 
 .app-footer {
+    border-top: 0.2em solid $primary-color;
     display: flex;
-    height: 5em;
+    height: 10em;
+    justify-content: center;
+    flex-direction: column;
+    
+    
     ul {
         width: 20em;
         height: 5em;
         margin: auto;
+        list-style-type: none;
     }
-    small {
-        width: 12em;
-        height: 1em;
-        margin: auto;
+
+    div {
+        display: flex;
+        small {
+            width: 20em;
+            height: 1em;
+            margin-left: auto;
+        }
     }
 }
